# ChangeLog for kde-base/kwin
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/kde-base/kwin/ChangeLog,v 1.354 2013/09/03 19:50:23 creffett Exp $

  03 Sep 2013; Chris Reffett <creffett@gentoo.org> -kwin-4.11.0.ebuild:
  Drop KDE 4.11.0

*kwin-4.11.1 (03 Sep 2013)

  03 Sep 2013; Chris Reffett <creffett@gentoo.org> +kwin-4.11.1.ebuild:
  Bump KDE to 4.1.1

  19 Aug 2013; Michael Palimaka <kensington@gentoo.org> kwin-4.11.0.ebuild:
  Add missing dependencies wrt bug #481458.

*kwin-4.11.0 (14 Aug 2013)

  14 Aug 2013; Andreas K. Huettel <dilfridge@gentoo.org> +kwin-4.11.0.ebuild:
  Version bump KDE SC 4.11.0

  02 Aug 2013; Johannes Huber <johu@gentoo.org> -kwin-4.10.4.ebuild:
  Remove KDE SC 4.10.4

  02 Aug 2013; Agostino Sarubbo <ago@gentoo.org> kwin-4.10.5.ebuild:
  Stable for ppc64, wrt to bug #477634

  30 Jul 2013; Agostino Sarubbo <ago@gentoo.org> kwin-4.10.5.ebuild:
  Stable for ppc, wrt to bug #477634

  29 Jul 2013; Agostino Sarubbo <ago@gentoo.org> kwin-4.10.5.ebuild:
  Stable for x86, wrt to bug #477634

  27 Jul 2013; Agostino Sarubbo <ago@gentoo.org> kwin-4.10.5.ebuild:
  Stable for amd64, wrt to bug #477634

  23 Jul 2013; Johannes Huber <johu@gentoo.org> kwin-4.10.4.ebuild,
  kwin-4.10.5.ebuild:
  Drop deps for qt-dev/designer changes, handled by eclass.

  23 Jul 2013; Michael Palimaka <kensington@gentoo.org> kwin-4.10.4.ebuild,
  kwin-4.10.5.ebuild:
  Fix Qt dependencies.

  20 Jul 2013; Johannes Huber <johu@gentoo.org> kwin-4.10.4.ebuild,
  kwin-4.10.5.ebuild:
  Pin dev-qt/designer to SLOT 4.

  20 Jul 2013; Johannes Huber <johu@gentoo.org> kwin-4.10.4.ebuild,
  kwin-4.10.5.ebuild:
  Don't pull in dev-qt/qtphonon.

  12 Jul 2013; Patrick Lauer <patrick@gentoo.org> kwin-4.10.4.ebuild,
  kwin-4.10.5.ebuild:
  Adapting deps for upcoming qt-4.8.5

*kwin-4.10.5 (02 Jul 2013)

  02 Jul 2013; Johannes Huber <johu@gentoo.org> +kwin-4.10.5.ebuild:
  Version bump KDE SC 4.10.5
