@@ -3,16 +3,18 @@ Hash: SHA256
 
 DIST kde-workspace-4.10.5.tar.xz 13569732 SHA256 a346420258f96475b47a7e3a78945fc38c10d4732b01d8fc371d11dcad56e875 SHA512 b90d015a91298cf98aebda60f08d18ff8afdfc813b4d27aa245fd2d3cc5bd31c3fcd57ce85fc188c167cd33b6d9ca537dbd5349871182062542ef526c360f0ff WHIRLPOOL 4a2448eb586c5223a9b86be5206f037de1765fe625a5fa0d222c35a1a61376b42625b52db453e2db1e88eb7efdea94fb375622d6db79ec29b0038eed3a6df331
 DIST kde-workspace-4.11.1.tar.xz 13863804 SHA256 78a157b09412de8067998268b0543f90c8120c3968a197d1ddd183eae6b5ff6e SHA512 dfd92ddbc7bce6c5dc5ee8722cc6af020413b9df5ac02c46d8270accf8a449a3b24bcc694917aeab14f788a6682aa857a336261d8092dc49907d27c7a753c8b5 WHIRLPOOL 529c8c7d6b7db14c0d6124be142432cd81ce45b684355aab53c770a3d96bee37a19c83d5c9800aa4337f0bfafe32a57dc4d7e8d02b4faeec4a7dadd414337c58
-EBUILD kwin-4.10.5.ebuild 1709 SHA256 0c867500383b5166b25f03507afdaf7b1552a077cc776e6fbe8120a162e0c8e7 SHA512 6efbf47a4c3bcfedad4135db1f656335cccea74e35302e84445a2da876124a4310e9682128de6f4fcf1f5228a4f4f5932cc1605466d38205faf40f2bfeb4954e WHIRLPOOL ccb108b6999af40b89240672661dc3e96e4ee418170859358321022cc6ccd9ffc37029c292c90912dc7c54430926de812035913e97600c346822746c53831180
-EBUILD kwin-4.11.1.ebuild 1943 SHA256 ea8c18ad86c284137f67cd2b703b23c29885ad65dd9e20552c1796ce53066271 SHA512 a97012c7739b8989c2cdbb159d4334908c5dc5bbb95ecb355cf8a5851ede574e1487c8d35ff4f6e0a04556348b5c8bcd8e485e9af71dd96e9c2f4e3b09d6b125 WHIRLPOOL e2c0b2de4f8e18bbd87bbf0b18c0cf97aad1a48ef8d475ce6c72080fdc45b93ad151af5f39dbc02a890d4d87788d0c6baa45c1c679fa0f7781551bae0333751b
-MISC ChangeLog 43220 SHA256 ed7e6d1e4a463ad9458ff7b260e48957b731607765067df454226b367d7fb1aa SHA512 a559a2a690c44ea2205c6717fb28c49eaba8d7338b4042fa691a7d418f9b0369e994e8742a3323cd2528d2818b611f2ac56a53be773849c28600c518457e054d WHIRLPOOL 84a0269d57dc0018e4f3fe0d2ca6b3e64dc1a9436fe443910c380711cb84ac72bba4c173932ea94cecc22edcb08025ae9422ceae126d3e9dd8e08d6537e09185
+EBUILD kwin-4.10.5.ebuild 1740 SHA256 b0573954af934b65227acf1b52a833fe47d076406e9f57c669c5f6214db42226 SHA512 6e1eee93aa0193df21b4d402d7e262835248fb817b51ae62c5a8649390995aba1a1d8329ee755ac038b9e09d765ab9f6931f3e13cae565aa53421efb2b882bd8 WHIRLPOOL 03e964fcc83ea999be89a80a242c7ec8eccaefe68902b38d6640b022d1ff40bf70cb4f99869acef1352f672bb584a0d1d67e53222d05e7a42248498fdd4e9f72
+EBUILD kwin-4.11.1.ebuild 1969 SHA256 0fefb18c9b2514e8f5629dbb7a1240b829aa68a52737b879310e6357a4994822 SHA512 ceade3363f10cddf575d3f44fcaa332d212953fe5b7b9bd11d3c64a25033d86851e44b62e4cc9049faef7135247f341e89cf5e583e1b8c0a4e68786503f4648b WHIRLPOOL 050d0348a5428975e97ddae8f3822672d6dc1fe3e02472cbd44a30b159a9f1f34209dec415ae2c106ba14a76c05e6465803f08f15868d86dcc423e38cfbf8e9b
+MISC ChangeLog 43377 SHA256 d2a67938bb37cf1f17c23a81c05256a466052f4430ecc4d90a19df9e086d25fe SHA512 ad4f5a723fcc67546a3eb8b30af6897a6e76b7105de17da32ec92bddee2b5910ee0d07e1e852d962dba0a4e62d6263b1a578f89be34504baf32fb713e09e3cff WHIRLPOOL e752dd77d6a95e378d051d8613237187721059e18f8777ca55af72e9f8f006e5e3885898ff369d6d77c770acb4ad25d6320e7b10c0abeb87c31a9a83214ab046
 MISC metadata.xml 229 SHA256 1cd96488355a3e48a2b0b12f09ad8e3ea923e199b4fcbf175590cd317b033af7 SHA512 357e165f3706a18dbab9ce108b28d7b3338e3a458fb9d184d701e7fd932f41d1abdc7785bdd22003b2bd2d702674b3dcc206b39e141d8c3adfda7d6d1d1ec0d8 WHIRLPOOL fd66f59afef8829e84f2be5f0782511e6b16dbd811d432205eaf629470055d1d4173d135a59b95668500c4b4cb15bcf9f6230e96aecf5f0e1d5338d4d4881018
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.20 (GNU/Linux)
+Version: GnuPG v2.0.21 (GNU/Linux)
 
-iKYEAREIAGYFAlImPZpfFIAAAAAALgAoaXNzdWVyLWZwckBub3RhdGlvbnMub3Bl
-bnBncC5maWZ0aGhvcnNlbWFuLm5ldEM2NzU5RjUyMDczREJDQkVDQTBDRkE1NERC
-Nzk1QThBNDI2MTgzNTQACgkQ23laikJhg1RPRgCfeEpI06FgurCCrH9mZx4RrnPP
-9dAAn0LIhDa/iqiMFhbDvInFvE8PbSiT
-=SN1A
+iQEcBAEBCAAGBQJSQ03iAAoJEO+t9ga+3I3aahwH/1rffTyF2dg+aE5kOAInS+Aj
+wcQHtGyXCYJrihTO2tpUX1MrkUwVPqEJEtzjYiaHOZWhOGCQkamI839SpBHt7x6X
+7feZNAeDuy1pdHGFGU1lx8xJEexDpC+v1wZ5z7bCdMBtIiv0+4IMs8m01AyrY2rA
+EI9xUuXitNuP5bOq0uBVgoce6exmhUOQuQ3JfcsRY9LiXT2zo4Z9gy0OmoyI6cac
+NaVZ6oDiZ0mUqfXvyyKoPHzxMXp0VGl9P5Je6kK24ho5cROPPG58QXYvprJ9hP61
+G0rWA3vvYU1ZKWuI8V14BfdFJ4Q1Z029v6ZqYfQ7lPsGiCmStCbZYRRsNuMHwEw=
+=SvfK
 -----END PGP SIGNATURE-----
